# FM-Deck-Check

./: CMakeLists.txt  LICENSE.txt  README.md
src/: card_names.h  deck_filter.cpp  main.cpp  options.cpp  options.h  rng.cpp  rng.h  starter_deck.cpp  starter_deck.h  starter_deck_data.h
tests/: CMakeLists.txt  deck_filter_unittest.cpp  rng_unittest.cpp  square_tests.cpp  starter_deck_unittest.cpp
